--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,9 @@ flutter:
   assets:
     - images/banner_entrada.png
     - images/cow_drawer.png
+    - images/logo_enagro.png
+    - images/logo_enagro_dark.png
+    - images/logo_enagro_white.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
