--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   shared_preferences: ^2.0.7
   jwt_decoder: ^2.0.1
   image_picker: ^1.0.2
+  date_field: ^3.0.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
