--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   date_field: ^3.0.5
   auto_animated_list: ^1.0.4
   flip_carousel: ^0.0.3
+  backdrop_modal_route: ^2.0.1
+  multi_select_flutter: ^4.1.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
