--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flip_carousel: ^0.0.3
   backdrop_modal_route: ^2.0.1
   multi_select_flutter: ^4.1.3
+  checkbox_grouped: ^2.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
