--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   intl: ^0.18.1
+  chips_choice: ^3.0.1
+  dropdown_textfield: ^1.0.8
+  stepper_page_view: ^0.0.2
+  selectable_list: ^0.1.1
 
 dev_dependencies:
   flutter_test:
