--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   dropdown_textfield: ^1.0.8
   stepper_page_view: ^0.0.2
   selectable_list: ^0.1.1
+  card_actions: ^0.0.1
 
 dev_dependencies:
   flutter_test:
